syntax = "proto3";

package xgrpc;

import "google/protobuf/empty.proto";

service HardwareAccessLayer{
    rpc RunProgram(Options) returns(google.protobuf.Empty);
    rpc Command(OptionsCommand) returns(AnswerCommand);
    rpc Volume(google.protobuf.Empty) returns(Answer);
}

message Options{
    int32 program_id = 1;
    int32 second_program_id = 2;
    int32 timeoutSec = 3;
    int32 motorSpeedPercent = 4;
}

message OptionsCommand{
    int32 command = 1;
}

message Answer{
    int64 answer = 1;
    int64 status = 2;
}

message AnswerCommand{
    int64 answer = 1; 
}
